<resources>
    <string name="app_name">FestaApp</string>
    <string name="navigation_drawer_open">Menu gaveta aberto</string>
    <string name="navigation_drawer_close">Menu gaveta fechado</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="img_description">This is an image</string>


    <string name="tx_login">Login</string>
    <string name="tx_or">ou</string>
    <string name="tx_me_sign_up">me Cadastrar</string>
    <string name="tx_conected_as">Conectado como:</string>


    <!-- Geral -->
    <string name="add">Adicionar</string>
    <string name="update">Atualizar</string>
    <string name="cancel">Cancelar</string>
    <string name="invalid">Falhou, tente novamente.</string>
    <string name="invalid_date">Data Inválida.</string>
    <string name="invalid_hour">Hora Inválida.</string>
    <string name="valid">Sucesso!</string>
    <string name="hour">20:00</string>
    <string name="money">R$ 300,00</string>
    <string name="money_0">R$ 0,00</string>


    <!-- Menu -->
    <string name="item_dashboard">Dashboard</string>
    <string name="item_expenses">Gastos</string>
    <string name="item_invite">Convites</string>
    <string name="item_rotation">Escala</string>
    <string name="item_post">Posts</string>
    <string name="item_list_rep">Lista Rep</string>

    <string name="item_all_party">Todas Festas</string>
    <string name="item_settings">Minhas configurações</string>
    <string name="item_sign_out">Sair</string>




    <!-- AccountSettingsActivity -->
    <string name="title_activity_account_settings">Configurações de conta</string>

    <string name="connected">Conectado:</string>

    <string name="setting_item_profile">Perfil</string>
    <string name="setting_item_profile_desc">Para atualização de nome e foto de perfil.</string>

    <string name="setting_item_login">Conexão (login)</string>
    <string name="setting_item_login_desc">Para atualização de e-mail ou senha de acesso.</string>


    <!-- FragmentProfile -->
    <string name="title_activity_config_profile">Perfil</string>

    <string name="info_profile_photo">Toque na foto para abrir a galeria ou fotografia.</string>

    <string name="name_label">Nome:</string>
    <string name="config_profile">Atualizar perfil</string>
    <string name="config_profile_going">Atualizando&#8230;</string>
    <string name="invalid_name">Nome inválido.</string>
    <string name="invalid_config_profile">Um nome válido deve ser fornecido</string>


    <!-- FragmentListRep -->
    <string name="title_frag_list_rep">Lista de Repúblicas</string>

    <!-- FragmentPost -->
    <string name="title_frag_post">Posts</string>
    <string name="what">O que:</string>
    <string name="notices">Avisos:</string>
    <string name="date">Data:</string>
    <string name="date_example">20/04/2019</string>
    <string name="horary">Horário:</string>
    <string name="who">Quem:</string>
    <string name="description">Descrição:</string>


    <string name="updating_post">Atualizando post.</string>

    <string name="add_post">Adicionar Post</string>
    <string name="update_post_going">Atualizando&#8230;</string>
    <string name="update_post">Atualizar post</string>


    <string name="invalid_what">Mínimo de 4 caracteres.</string>
    <string name="invalid_notice">Mínimo de 4 caracteres.</string>
    <string name="invalid_who">Mínimo de 4 caracteres.</string>

    <!-- Image Picker API - Adição e sobreposição de String -->
    <string name="imagepicker_msg_no_images">Não há imagens na galeria.</string>
    <string name="imagepicker_gallery_activity">Galeria</string>
    <string name="imagepicker_cam_photos_activity">Fotos câmera BlueShoes</string>
    <string name="imagepicker_selection_limit">Apenas uma imagem pode ser selecionada.</string>
    <string name="nick_name_label">Apelido:</string>


    <!-- FragmentRotation -->
    <string name="title_frag_rotation">Escala</string>
    <string name="time_to">até</string>
    <string name="time_start">Hora inicio.</string>


    <string name="add_rotation_time">Adicionar escala</string>
    <string name="update_rotation_time_going">Atualizando&#8230;</string>
    <string name="update_rotation_time">Atualizar escala</string>

    <string name="updating_rotation_time">Atualizando Escala.</string>


    <!-- LoginActivity -->
    <string name="title_activity_login">Login</string>

    <string name="invalid_email">Forneça um e-mail válido.</string>
    <string name="invalid_password">Mínimo de 6 caracteres.</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="forgot_my_password">Esqueci minha senha</string>
    <string name="sign_in">Entrar</string>
    <string name="sign_in_going">Entrando&#8230;</string>
    <string name="or">ou</string>
    <string name="create_my_account">Criar minha conta</string>
    <string name="privacy_policy">Políticas de privacidade</string>
    <string name="invalid_login">Dados de login inválidos.</string>
    <string name="valid_login">Dados de login corretos.</string>

    <!-- ConnectDataActivity -->
    <string name="title_activity_config_connection_data">Conexão (login)</string>

    <!-- FormEmailFragment -->
    <string name="config_connection_data_tab_email">E-MAIL</string>

    <string name="hint_current_email">E-mail atual</string>
    <string name="hint_new_email">Novo e-mail</string>
    <string name="hint_new_email_confirm">Confirmar novo e-mail</string>

    <string name="invalid_confirmed_email">Confirme o e-mail informado no campo acima.</string>

    <string name="update_email_login">Atualizar e-mail de login</string>
    <string name="update_email_login_going">Atualizando&#8230;</string>



    <!-- FormPasswordFragment -->
    <string name="config_connection_data_tab_password">SENHA</string>

    <string name="hint_new_password">Nova senha</string>
    <string name="hint_new_password_confirm">Confirmar nova senha</string>

    <string name="update_password">Atualizar senha</string>
    <string name="update_password_going">Atualizando&#8230;</string>



    <!-- ExpensesFragment -->
    <string name="title_frag_expenses_fragment">Gastos</string>
    <string name="total">Total = </string>

    <string name="expenses_fragment_name">Nome:</string>

        <!-- DrinkExpensesFragment -->
        <string name="drink_expenses_fragment_tab_list">Bebidas</string>

        <string name="drink_expenses_fragment_qtdByPerson">Qdd/pessoa (L)</string>
        <string name="drink_expenses_fragment_qtdProvided">Quantidade PREVISTA (em L)</string>
        <string name="drink_expenses_fragment_used">Qdd (unid) USADO</string>
        <string name="drink_expenses_fragment_priceLiter">Preço litro:</string>
        <string name="drink_expenses_fragment_total">TOTAL:</string>
        <string name="drink_expenses_fragment_provider">Fornecedor:</string>
        <string name="drink_expenses_fragment_cups">COPOS (qtd e valor individual)</string>
        <string name="drink_expenses_fragment_allBar">Valor total de venda de todo bar</string>
        <string name="drink_expenses_fragment_paid">Pago</string>
        <string name="drink_expenses_fragment_litros_by_pessoa">litros/pessoa</string>
        <string name="drink_expenses_fragment_total_sum">Soma Total</string>
        <string name="drink_expenses_fragment_total_sale_drinks">Total venda de bebidas</string>
        <string name="drink_expenses_fragment_total_drink_less_shopping">Venda de bebidas do role - compras de bebidas</string>

        <string name="updating_drink">Atualizando bebida.</string>

        <string name="add_drink">Adicionar bebida</string>
        <string name="update_drink_going">Atualizando&#8230;</string>
        <string name="update_drink">Atualizar bebida</string>


        <!-- FiexedExpensesFragment -->
        <string name="fixed_expenses_fragment_tab_list">Fixos</string>

        <string name="fixed_expenses_fragment_price">Preço:</string>

        <string name="updating_fixed">Atualizando fixo.</string>

        <string name="add_fixed">Adicionar fixo</string>
        <string name="update_fixed_going">Atualizando&#8230;</string>
        <string name="update_fixed">Atualizar fixo</string>



    <!-- InviteFragment -->
    <string name="title_frag_invite_fragment">Convites</string>

    <string name="updating_invite">Atualizando Convite.</string>

    <string name="add_invite">Adicionar convite</string>
    <string name="update_invite_going">Atualizando&#8230;</string>
    <string name="update_invite">Atualizar convite</string>

    <string name="invite_fragment_valor">Valor</string>
    <string name="invite_fragment_expected_sales">Expected Sales</string>
    <string name="invite_fragment_total">Total:</string>


    <string name="invalid_invite_name">Mínimo de 4 caracteres.</string>

        <!-- StudentFragment -->
        <string name="student_invite_fragment_tab_list">Alunos</string>
        <string name="updating_invite_sutdent">Atualizando Convite Estudante.</string>



        <!-- NotStudentFragment -->
        <string name="not_student_invite_fragment_tab_list">Não Alunos</string>
        <string name="updating_invite_not_sutdent">Atualizando Convite Não Estudante.</string>


    <!-- Dialog Password -->
    <string name="dialog_password_info">Entre com a senha para poder prosseguir:</string>
    <string name="dialog_password_hint">Senha</string>
    <string name="dialog_password_go">PROSSEGUIR</string>
    <string name="dialog_password_cancel">CANCELAR</string>



    <!-- SignUpActivity -->
    <string name="title_activity_sign_up">Cadastro</string>

    <string name="hint_email_to_login">E-mail (para login)</string>
    <string name="hint_confirm_password">Confirmar senha</string>
    <string name="do_login">Realizar login</string>
    <string name="sign_up">Cadastrar</string>
    <string name="sign_up_going">Cadastrando&#8230;</string>
    <string name="invalid_sign_up_email">E-mail já cadastrado.</string>
    <string name="invalid_confirmed_password">Confirme a senha informada no campo acima.</string>



</resources>
