<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewFormLabel"
                android:text="@string/expenses_fragment_name"/>

            <EditText
                android:id="@+id/et_not_student_name"
                style="@style/EditTextFormField"
                android:layout_width="match_parent"
                android:background="@drawable/bg_form_field"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewFormLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/invite_fragment_valor" />

                <EditText
                    android:id="@+id/et_not_student_valor"
                    style="@style/EditTextFormField"
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_form_field"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    style="@style/TextViewFormLabel"
                    android:text="@string/invite_fragment_expected_sales"/>

                <EditText
                    android:id="@+id/et_not_student_expected_sales"
                    style="@style/EditTextFormField"
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_form_field"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewFormLabel"
                android:layout_marginStart="20dp"
                android:text="@string/invite_fragment_total"/>

            <TextView
                android:id="@+id/txt_not_student_total"
                style="@style/TextViewFormLabel"
                android:layout_marginStart="10dp"
                android:text="@string/money_0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="3dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_cancel_not_student"
                style="@style/ButtonForm"
                android:layout_marginEnd="10dp"
                android:layout_gravity="end"
                android:background="@drawable/bt_cancel_bg"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/bt_nu_not_student"
                style="@style/ButtonForm"
                android:layout_marginEnd="1dp"
                android:layout_gravity="end"
                android:text="@string/add_invite"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>