<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewFormLabel"
                android:text="@string/what"/>

            <EditText
                android:id="@+id/et_post_what"
                style="@style/EditTextFormField"
                android:layout_width="match_parent"
                android:maxLength="2000"
                android:maxLines="4"
                android:inputType="textPersonName"
                android:background="@drawable/bg_form_field"
                android:imeOptions="actionNext"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewFormLabel"
                android:text="@string/notices"/>

            <EditText
                android:id="@+id/et_post_notice"
                style="@style/EditTextFormField"
                android:layout_width="match_parent"
                android:maxLength="2000"
                android:maxLines="4"
                android:inputType="textPersonName"
                android:background="@drawable/bg_form_field"
                android:imeOptions="actionNext"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:layout_marginRight="12dp"
                        android:layout_marginEnd="12dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextViewFormLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/date" />

                        <com.santalu.maskedittext.MaskEditText
                            android:id="@+id/et_post_date"
                            style="@style/EditTextFormField"
                            android:layout_width="match_parent"
                            android:background="@drawable/bg_form_field"
                            android:inputType="number"
                            android:gravity="center"
                            android:hint="@string/date_example"
                            app:met_mask="##/##/####"
                            android:imeOptions="actionNext"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextViewFormLabel"
                            android:text="@string/horary"/>

                        <com.santalu.maskedittext.MaskEditText
                            android:id="@+id/et_post_horary"
                            style="@style/EditTextFormField"
                            android:layout_width="75dp"
                            android:background="@drawable/bg_form_field"
                            android:imeOptions="actionNext"
                            android:hint="@string/hour"
                            android:gravity="center"
                            app:met_mask="##:##"
                            android:inputType="number" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewFormLabel"
                android:text="@string/who"/>

            <EditText
                android:id="@+id/et_post_who"
                style="@style/EditTextFormField"
                android:layout_width="match_parent"
                android:maxLength="2000"
                android:maxLines="4"
                android:inputType="textPersonName"
                android:background="@drawable/bg_form_field"
                android:imeOptions="actionNext"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewFormLabel"
                android:text="@string/description"/>

            <EditText
                android:id="@+id/et_post_description"
                style="@style/EditTextFormField"
                android:layout_width="match_parent"
                android:maxLength="2000"
                android:maxLines="4"
                android:inputType="textPersonName|textMultiLine"
                android:background="@drawable/bg_form_field"
                android:imeOptions="actionDone"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="3dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_cancel_post"
                style="@style/ButtonForm"
                android:layout_marginEnd="10dp"
                android:layout_gravity="end"
                android:background="@drawable/bt_cancel_bg"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/bt_nu_post"
                style="@style/ButtonForm"
                android:layout_marginEnd="1dp"
                android:layout_gravity="end"
                android:text="@string/add_post"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>